lang/MattyParser.cpp

// Generated from ./lang/Matty.g4 by ANTLR 4.13.2


#include "MattyListener.h"
#include "MattyVisitor.h"

#include "MattyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MattyParserStaticData final {
  MattyParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MattyParserStaticData(const MattyParserStaticData&) = delete;
  MattyParserStaticData(MattyParserStaticData&&) = delete;
  MattyParserStaticData& operator=(const MattyParserStaticData&) = delete;
  MattyParserStaticData& operator=(MattyParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mattyParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MattyParserStaticData> mattyParserStaticData = nullptr;

void mattyParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mattyParserStaticData != nullptr) {
    return;
  }
#else
  assert(mattyParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MattyParserStaticData>(
    std::vector<std::string>{
      "programa", "seqComando", "comando", "valor", "expressao", "booleano"
    },
    std::vector<std::string>{
      "", "';'", "','", "'='", "'for'", "'to'", "'at'", "'make'", "'times'", 
      "'choose'", "'('", "'):'", "':'", "'_'", "'skip'", "'if'", "')'", 
      "'elif'", "'else'", "'while'", "'do'", "'print'", "'{'", "'}'", "'read'", 
      "'\\u00B4'", "'x'", "'|'", "'-'", "'~'", "'log'", "'\\'", "'/'", "'^'", 
      "'*'", "'//'", "'+'", "'=='", "'<='", "'<'", "'>'", "'>='", "'!='", 
      "'!'", "'and'", "'or'", "'xor'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "BOOLEANO", "FRACTION", 
      "ID", "INT", "STRING", "Comentario", "Espaco"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mattyParserStaticData = std::move(staticData);
}

}

MattyParser::MattyParser(TokenStream *input) : MattyParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MattyParser::MattyParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MattyParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mattyParserStaticData->atn, mattyParserStaticData->decisionToDFA, mattyParserStaticData->sharedContextCache, options);
}

MattyParser::~MattyParser() {
  delete _interpreter;
}

const atn::ATN& MattyParser::getATN() const {
  return *mattyParserStaticData->atn;
}

std::string MattyParser::getGrammarFileName() const {
  return "Matty.g4";
}

const std::vector<std::string>& MattyParser::getRuleNames() const {
  return mattyParserStaticData->ruleNames;
}

const dfa::Vocabulary& MattyParser::getVocabulary() const {
  return mattyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MattyParser::getSerializedATN() const {
  return mattyParserStaticData->serializedATN;
}


//----------------- ProgramaContext ------------------------------------------------------------------

MattyParser::ProgramaContext::ProgramaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MattyParser::ProgramaContext::EOF() {
  return getToken(MattyParser::EOF, 0);
}

std::vector<MattyParser::SeqComandoContext *> MattyParser::ProgramaContext::seqComando() {
  return getRuleContexts<MattyParser::SeqComandoContext>();
}

MattyParser::SeqComandoContext* MattyParser::ProgramaContext::seqComando(size_t i) {
  return getRuleContext<MattyParser::SeqComandoContext>(i);
}


size_t MattyParser::ProgramaContext::getRuleIndex() const {
  return MattyParser::RulePrograma;
}

void MattyParser::ProgramaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrograma(this);
}

void MattyParser::ProgramaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrograma(this);
}


std::any MattyParser::ProgramaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitPrograma(this);
  else
    return visitor->visitChildren(this);
}

MattyParser::ProgramaContext* MattyParser::programa() {
  ProgramaContext *_localctx = _tracker.createInstance<ProgramaContext>(_ctx, getState());
  enterRule(_localctx, 0, MattyParser::RulePrograma);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(13); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(12);
      seqComando();
      setState(15); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 562949960286864) != 0));
    setState(17);
    match(MattyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SeqComandoContext ------------------------------------------------------------------

MattyParser::SeqComandoContext::SeqComandoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MattyParser::ComandoContext *> MattyParser::SeqComandoContext::comando() {
  return getRuleContexts<MattyParser::ComandoContext>();
}

MattyParser::ComandoContext* MattyParser::SeqComandoContext::comando(size_t i) {
  return getRuleContext<MattyParser::ComandoContext>(i);
}


size_t MattyParser::SeqComandoContext::getRuleIndex() const {
  return MattyParser::RuleSeqComando;
}

void MattyParser::SeqComandoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSeqComando(this);
}

void MattyParser::SeqComandoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSeqComando(this);
}


std::any MattyParser::SeqComandoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitSeqComando(this);
  else
    return visitor->visitChildren(this);
}

MattyParser::SeqComandoContext* MattyParser::seqComando() {
  SeqComandoContext *_localctx = _tracker.createInstance<SeqComandoContext>(_ctx, getState());
  enterRule(_localctx, 2, MattyParser::RuleSeqComando);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(19);
    comando();
    setState(20);
    match(MattyParser::T__0);
    setState(26);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(21);
        comando();
        setState(22);
        match(MattyParser::T__0); 
      }
      setState(28);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComandoContext ------------------------------------------------------------------

MattyParser::ComandoContext::ComandoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MattyParser::ComandoContext::getRuleIndex() const {
  return MattyParser::RuleComando;
}

void MattyParser::ComandoContext::copyFrom(ComandoContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AtribuicaoContext ------------------------------------------------------------------

std::vector<tree::TerminalNode *> MattyParser::AtribuicaoContext::ID() {
  return getTokens(MattyParser::ID);
}

tree::TerminalNode* MattyParser::AtribuicaoContext::ID(size_t i) {
  return getToken(MattyParser::ID, i);
}

std::vector<MattyParser::ValorContext *> MattyParser::AtribuicaoContext::valor() {
  return getRuleContexts<MattyParser::ValorContext>();
}

MattyParser::ValorContext* MattyParser::AtribuicaoContext::valor(size_t i) {
  return getRuleContext<MattyParser::ValorContext>(i);
}

MattyParser::AtribuicaoContext::AtribuicaoContext(ComandoContext *ctx) { copyFrom(ctx); }

void MattyParser::AtribuicaoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtribuicao(this);
}
void MattyParser::AtribuicaoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtribuicao(this);
}

std::any MattyParser::AtribuicaoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitAtribuicao(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EscolhaContext ------------------------------------------------------------------

std::vector<MattyParser::ExpressaoContext *> MattyParser::EscolhaContext::expressao() {
  return getRuleContexts<MattyParser::ExpressaoContext>();
}

MattyParser::ExpressaoContext* MattyParser::EscolhaContext::expressao(size_t i) {
  return getRuleContext<MattyParser::ExpressaoContext>(i);
}

std::vector<MattyParser::ComandoContext *> MattyParser::EscolhaContext::comando() {
  return getRuleContexts<MattyParser::ComandoContext>();
}

MattyParser::ComandoContext* MattyParser::EscolhaContext::comando(size_t i) {
  return getRuleContext<MattyParser::ComandoContext>(i);
}

MattyParser::EscolhaContext::EscolhaContext(ComandoContext *ctx) { copyFrom(ctx); }

void MattyParser::EscolhaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEscolha(this);
}
void MattyParser::EscolhaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEscolha(this);
}

std::any MattyParser::EscolhaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitEscolha(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SeContext ------------------------------------------------------------------

std::vector<MattyParser::BooleanoContext *> MattyParser::SeContext::booleano() {
  return getRuleContexts<MattyParser::BooleanoContext>();
}

MattyParser::BooleanoContext* MattyParser::SeContext::booleano(size_t i) {
  return getRuleContext<MattyParser::BooleanoContext>(i);
}

std::vector<MattyParser::ComandoContext *> MattyParser::SeContext::comando() {
  return getRuleContexts<MattyParser::ComandoContext>();
}

MattyParser::ComandoContext* MattyParser::SeContext::comando(size_t i) {
  return getRuleContext<MattyParser::ComandoContext>(i);
}

MattyParser::SeContext::SeContext(ComandoContext *ctx) { copyFrom(ctx); }

void MattyParser::SeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSe(this);
}
void MattyParser::SeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSe(this);
}

std::any MattyParser::SeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitSe(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExibaContext ------------------------------------------------------------------

std::vector<MattyParser::ValorContext *> MattyParser::ExibaContext::valor() {
  return getRuleContexts<MattyParser::ValorContext>();
}

MattyParser::ValorContext* MattyParser::ExibaContext::valor(size_t i) {
  return getRuleContext<MattyParser::ValorContext>(i);
}

MattyParser::ExibaContext::ExibaContext(ComandoContext *ctx) { copyFrom(ctx); }

void MattyParser::ExibaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExiba(this);
}
void MattyParser::ExibaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExiba(this);
}

std::any MattyParser::ExibaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitExiba(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RepitaContext ------------------------------------------------------------------

MattyParser::ExpressaoContext* MattyParser::RepitaContext::expressao() {
  return getRuleContext<MattyParser::ExpressaoContext>(0);
}

MattyParser::ComandoContext* MattyParser::RepitaContext::comando() {
  return getRuleContext<MattyParser::ComandoContext>(0);
}

MattyParser::RepitaContext::RepitaContext(ComandoContext *ctx) { copyFrom(ctx); }

void MattyParser::RepitaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRepita(this);
}
void MattyParser::RepitaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRepita(this);
}

std::any MattyParser::RepitaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitRepita(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LoopContext ------------------------------------------------------------------

tree::TerminalNode* MattyParser::LoopContext::ID() {
  return getToken(MattyParser::ID, 0);
}

std::vector<MattyParser::ExpressaoContext *> MattyParser::LoopContext::expressao() {
  return getRuleContexts<MattyParser::ExpressaoContext>();
}

MattyParser::ExpressaoContext* MattyParser::LoopContext::expressao(size_t i) {
  return getRuleContext<MattyParser::ExpressaoContext>(i);
}

MattyParser::ComandoContext* MattyParser::LoopContext::comando() {
  return getRuleContext<MattyParser::ComandoContext>(0);
}

MattyParser::BooleanoContext* MattyParser::LoopContext::booleano() {
  return getRuleContext<MattyParser::BooleanoContext>(0);
}

MattyParser::LoopContext::LoopContext(ComandoContext *ctx) { copyFrom(ctx); }

void MattyParser::LoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoop(this);
}
void MattyParser::LoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoop(this);
}

std::any MattyParser::LoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitLoop(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BlocoContext ------------------------------------------------------------------

MattyParser::SeqComandoContext* MattyParser::BlocoContext::seqComando() {
  return getRuleContext<MattyParser::SeqComandoContext>(0);
}

MattyParser::BlocoContext::BlocoContext(ComandoContext *ctx) { copyFrom(ctx); }

void MattyParser::BlocoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBloco(this);
}
void MattyParser::BlocoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBloco(this);
}

std::any MattyParser::BlocoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitBloco(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SkipContext ------------------------------------------------------------------

MattyParser::SkipContext::SkipContext(ComandoContext *ctx) { copyFrom(ctx); }

void MattyParser::SkipContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSkip(this);
}
void MattyParser::SkipContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSkip(this);
}

std::any MattyParser::SkipContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitSkip(this);
  else
    return visitor->visitChildren(this);
}
MattyParser::ComandoContext* MattyParser::comando() {
  ComandoContext *_localctx = _tracker.createInstance<ComandoContext>(_ctx, getState());
  enterRule(_localctx, 4, MattyParser::RuleComando);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MattyParser::ID: {
        _localctx = _tracker.createInstance<MattyParser::AtribuicaoContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(29);
        match(MattyParser::ID);
        setState(34);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == MattyParser::T__1) {
          setState(30);
          match(MattyParser::T__1);
          setState(31);
          match(MattyParser::ID);
          setState(36);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(37);
        match(MattyParser::T__2);
        setState(38);
        valor();
        setState(43);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == MattyParser::T__1) {
          setState(39);
          match(MattyParser::T__1);
          setState(40);
          valor();
          setState(45);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case MattyParser::T__3: {
        _localctx = _tracker.createInstance<MattyParser::LoopContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(46);
        match(MattyParser::T__3);
        setState(47);
        match(MattyParser::ID);
        setState(48);
        match(MattyParser::T__4);
        setState(49);
        expressao(0);
        setState(50);
        match(MattyParser::T__5);
        setState(51);
        expressao(0);
        setState(52);
        comando();
        break;
      }

      case MattyParser::T__6: {
        _localctx = _tracker.createInstance<MattyParser::RepitaContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(54);
        match(MattyParser::T__6);
        setState(55);
        expressao(0);
        setState(56);
        match(MattyParser::T__7);
        setState(57);
        comando();
        break;
      }

      case MattyParser::T__8: {
        _localctx = _tracker.createInstance<MattyParser::EscolhaContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(59);
        match(MattyParser::T__8);
        setState(60);
        match(MattyParser::T__9);
        setState(61);
        expressao(0);
        setState(62);
        match(MattyParser::T__10);
        setState(69);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 1970328108532736) != 0)) {
          setState(63);
          expressao(0);
          setState(64);
          match(MattyParser::T__11);
          setState(65);
          comando();
          setState(71);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(72);
        match(MattyParser::T__12);
        setState(73);
        match(MattyParser::T__11);
        setState(74);
        comando();
        break;
      }

      case MattyParser::T__13: {
        _localctx = _tracker.createInstance<MattyParser::SkipContext>(_localctx);
        enterOuterAlt(_localctx, 5);
        setState(76);
        match(MattyParser::T__13);
        break;
      }

      case MattyParser::T__14: {
        _localctx = _tracker.createInstance<MattyParser::SeContext>(_localctx);
        enterOuterAlt(_localctx, 6);
        setState(77);
        match(MattyParser::T__14);
        setState(78);
        match(MattyParser::T__9);
        setState(79);
        booleano(0);
        setState(80);
        match(MattyParser::T__15);
        setState(81);
        comando();
        setState(90);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == MattyParser::T__16) {
          setState(82);
          match(MattyParser::T__16);
          setState(83);
          match(MattyParser::T__9);
          setState(84);
          booleano(0);
          setState(85);
          match(MattyParser::T__15);
          setState(86);
          comando();
          setState(92);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(93);
        match(MattyParser::T__17);
        setState(94);
        comando();
        break;
      }

      case MattyParser::T__18: {
        _localctx = _tracker.createInstance<MattyParser::LoopContext>(_localctx);
        enterOuterAlt(_localctx, 7);
        setState(96);
        match(MattyParser::T__18);
        setState(97);
        match(MattyParser::T__9);
        setState(98);
        booleano(0);
        setState(99);
        match(MattyParser::T__15);
        setState(100);
        match(MattyParser::T__19);
        setState(101);
        comando();
        break;
      }

      case MattyParser::T__20: {
        _localctx = _tracker.createInstance<MattyParser::ExibaContext>(_localctx);
        enterOuterAlt(_localctx, 8);
        setState(103);
        match(MattyParser::T__20);
        setState(104);
        match(MattyParser::T__9);
        setState(113);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 4371661503595520) != 0)) {
          setState(105);
          valor();
          setState(110);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == MattyParser::T__1) {
            setState(106);
            match(MattyParser::T__1);
            setState(107);
            valor();
            setState(112);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(115);
        match(MattyParser::T__15);
        break;
      }

      case MattyParser::T__21: {
        _localctx = _tracker.createInstance<MattyParser::BlocoContext>(_localctx);
        enterOuterAlt(_localctx, 9);
        setState(116);
        match(MattyParser::T__21);
        setState(117);
        seqComando();
        setState(118);
        match(MattyParser::T__22);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ValorContext ------------------------------------------------------------------

MattyParser::ValorContext::ValorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MattyParser::ExpressaoContext* MattyParser::ValorContext::expressao() {
  return getRuleContext<MattyParser::ExpressaoContext>(0);
}

MattyParser::BooleanoContext* MattyParser::ValorContext::booleano() {
  return getRuleContext<MattyParser::BooleanoContext>(0);
}

tree::TerminalNode* MattyParser::ValorContext::STRING() {
  return getToken(MattyParser::STRING, 0);
}


size_t MattyParser::ValorContext::getRuleIndex() const {
  return MattyParser::RuleValor;
}

void MattyParser::ValorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterValor(this);
}

void MattyParser::ValorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitValor(this);
}


std::any MattyParser::ValorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitValor(this);
  else
    return visitor->visitChildren(this);
}

MattyParser::ValorContext* MattyParser::valor() {
  ValorContext *_localctx = _tracker.createInstance<ValorContext>(_ctx, getState());
  enterRule(_localctx, 6, MattyParser::RuleValor);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(125);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(122);
      expressao(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(123);
      booleano(0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(124);
      match(MattyParser::STRING);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressaoContext ------------------------------------------------------------------

MattyParser::ExpressaoContext::ExpressaoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MattyParser::ExpressaoContext::getRuleIndex() const {
  return MattyParser::RuleExpressao;
}

void MattyParser::ExpressaoContext::copyFrom(ExpressaoContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SomaOuSubtracaoContext ------------------------------------------------------------------

std::vector<MattyParser::ExpressaoContext *> MattyParser::SomaOuSubtracaoContext::expressao() {
  return getRuleContexts<MattyParser::ExpressaoContext>();
}

MattyParser::ExpressaoContext* MattyParser::SomaOuSubtracaoContext::expressao(size_t i) {
  return getRuleContext<MattyParser::ExpressaoContext>(i);
}

MattyParser::SomaOuSubtracaoContext::SomaOuSubtracaoContext(ExpressaoContext *ctx) { copyFrom(ctx); }

void MattyParser::SomaOuSubtracaoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSomaOuSubtracao(this);
}
void MattyParser::SomaOuSubtracaoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSomaOuSubtracao(this);
}

std::any MattyParser::SomaOuSubtracaoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitSomaOuSubtracao(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LeiaContext ------------------------------------------------------------------

MattyParser::LeiaContext::LeiaContext(ExpressaoContext *ctx) { copyFrom(ctx); }

void MattyParser::LeiaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLeia(this);
}
void MattyParser::LeiaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MattyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLeia(this);
}

std::any MattyParser::LeiaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MattyVisitor*>(visitor))
    return parserVisitor->visitLeia(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogaritmoContext ------------------------------------------------------------------

std::vector<MattyParser::ExpressaoContext *> MattyParser::LogaritmoContext::expressao() {
  return getRuleContexts<MattyParser::ExpressaoContext>();
}
